--- a/src/components/global.css
+++ b/src/components/global.css
@@ -24,6 +24,12 @@ html * {
   box-sizing: border-box;
 }
 
+@media  (max-width: 400px)  {
+  body {
+    max-width: 100vw;
+  }
+}
+
 body {
   background: var(--background);
   color: var(--text-color);
